--- a/app/src/main/res/drawable/glass_card.xml
+++ b/app/src/main/res/drawable/glass_card.xml
@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="20dp"/>
-    <solid android:color="#E0FFFFFF"/>
-    <stroke android:width="2dp" android:color="#F0FFFFFF"/>
-    <padding android:left="32dp" android:top="32dp" android:right="32dp" android:bottom="32dp"/>
+    <solid android:color="@color/glass_white_translucent"/>
+    <corners android:radius="32dp"/>
+    <stroke android:width="1dp" android:color="@color/glass_border"/>
 </shape>
