--- a/app/src/main/res/drawable/input_glass.xml
+++ b/app/src/main/res/drawable/input_glass.xml
@@ -1,14 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#F0FFFFFF" />
-    <corners android:radius="15dp" />
-    <stroke
-        android:width="2dp"
-        android:color="#FF007BFF" />
-    <padding
-        android:left="15dp"
-        android:top="15dp"
-        android:right="15dp"
-        android:bottom="15dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/glass_white_50"/>
+    <corners android:radius="12dp"/>
+    <stroke android:width="1dp" android:color="@color/glass_border_white"/>
 </shape>
