fix order tracking

--- a/app/src/main/res/layout/fragment_admin_manage_product.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_product.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Manage Order"
-            android:backgroundTint="@color/textColorHint"
+            android:backgroundTint="@color/glass_blue_1"
             android:textSize="20sp"
             android:layout_marginTop="16dp" />
 
