--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="light_grey">#F3F3F3</color>
     <color name="green">#1FA867</color>
     <color name="yellow_star">#FFC106</color>
+    <color name="hint_text">#A0A0A0</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
